--- a/applications/stream-applications-core/pom.xml
+++ b/applications/stream-applications-core/pom.xml
@@ -17,12 +17,11 @@
 
     <properties>
         <stream-apps-core.version>5.0.0-SNAPSHOT</stream-apps-core.version>
-        <java-functions.version>5.0.0-M2</java-functions.version>
-        <apps.base-image>springcloud/baseimage:1.0.4</apps.base-image>
+        <java-functions.version>5.0.0-SNAPSHOT</java-functions.version>
 		<prometheus-rsocket.version>1.5.2</prometheus-rsocket.version>
-        <spring-cloud-dataflow-apps-generator-plugin.version>1.0.12</spring-cloud-dataflow-apps-generator-plugin.version>
-        <spring-cloud-dataflow-apps-docs-plugin.version>1.0.12</spring-cloud-dataflow-apps-docs-plugin.version>
-        <spring-cloud-dataflow-apps-metadata-plugin.version>1.0.12</spring-cloud-dataflow-apps-metadata-plugin.version>
+        <spring-cloud-dataflow-apps-generator-plugin.version>1.0.13-SNAPSHOT</spring-cloud-dataflow-apps-generator-plugin.version>
+        <spring-cloud-dataflow-apps-docs-plugin.version>1.0.13-SNAPSHOT</spring-cloud-dataflow-apps-docs-plugin.version>
+        <spring-cloud-dataflow-apps-metadata-plugin.version>1.0.13-SNAPSHOT</spring-cloud-dataflow-apps-metadata-plugin.version>
         <java-cfenv-boot.version>2.4.1</java-cfenv-boot.version>
     </properties>
 
@@ -139,7 +138,6 @@
                                 <bootVersion>${spring-boot.version}</bootVersion>
                                 <containerImage>
                                     <orgName>springcloudstream</orgName>
-                                    <baseImage>${apps.base-image}</baseImage>
                                     <enableMetadata>true</enableMetadata>
                                 </containerImage>
                                 <properties>
