--- a/.github/workflows/apps-plugin-snapshot.yml
+++ b/.github/workflows/apps-plugin-snapshot.yml
@@ -2,6 +2,11 @@ name: Apps Plugin (Snapshot)
 
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - 'main'
+    paths:
+      - 'spring-cloud-dataflow-apps-plugin/**'
 
 env:
   MAVEN_THREADS: '-T 0.5C'
@@ -24,7 +29,7 @@ jobs:
           distribution: temurin
       - uses: jvalkeal/setup-maven@v1
         with:
-          maven-version: 3.8.8
+          maven-version: 3.9.4
           maven-mirror: 'https://dlcdn.apache.org/maven/maven-3/'
       - uses: jfrog/setup-jfrog-cli@v3
         with:
