Plugin build from push.

--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -10,6 +10,7 @@ on:
   push:
     paths-ignore:
       - '.github/**'
+      - 'spring-cloud-dataflow-apps-plugin/**'
     branches:
       - 'main'
 
