--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -129,11 +129,8 @@ jobs:
       - name: 'Action: Trivy scan'
         shell: bash
         run: |
-          echo "SKIPPING THIS FOR NOW - FIX ME!!!"
-#          ROOT_DIR=$(realpath $PWD)
-#          pushd stream-applications > /dev/null
-#            $ROOT_DIR/scan-folders.sh table
-#          popd > /dev/null
+          BUILD_DIR=$(realpath $MAIN_PATH)
+          $BUILD_DIR/scan-folders.sh table
       - name: 'Upload: Error logs'
         if: ${{ failure() }}
         uses: actions/upload-artifact@v3
