--- a/stream-applications-build/pom.xml
+++ b/stream-applications-build/pom.xml
@@ -36,7 +36,7 @@
         <disable.nohttp.checks>true</disable.nohttp.checks>
         <spring-javaformat-checkstyle.version>0.0.35</spring-javaformat-checkstyle.version>
 
-        <spring-boot.version>3.3.0-M3</spring-boot.version>
+        <spring-boot.version>3.3.0</spring-boot.version>
         <spring.version>6.1.5</spring.version>
 
         <!--        <spring-integration.version>6.1.0</spring-integration.version>-->
