--- a/stream-applications-build/pom.xml
+++ b/stream-applications-build/pom.xml
@@ -35,29 +35,22 @@
         <nohttp-checkstyle.version>0.0.10</nohttp-checkstyle.version>
         <disable.nohttp.checks>true</disable.nohttp.checks>
         <spring-javaformat-checkstyle.version>0.0.35</spring-javaformat-checkstyle.version>
-
-        <spring-boot.version>3.3.0-M3</spring-boot.version>
-        <spring.version>6.1.5</spring.version>
-
-        <!--        <spring-integration.version>6.1.0</spring-integration.version>-->
-
-        <spring-cloud.version>2023.0.1</spring-cloud.version>
-        <spring-cloud-starters.version>4.0.5</spring-cloud-starters.version>
-        <spring-cloud-function.version>4.1.1</spring-cloud-function.version>
-        <spring-cloud-stream-dependencies.version>4.1.1</spring-cloud-stream-dependencies.version>
-
-        <testcontainers.version>1.19.7</testcontainers.version>
+        <spring-boot.version>3.3.0</spring-boot.version>
+        <spring.version>6.1.8</spring.version>
+        <spring-cloud.version>2023.0.2</spring-cloud.version>
+        <spring-cloud-starters.version>4.1.2</spring-cloud-starters.version>
+        <spring-cloud-function.version>4.1.2</spring-cloud-function.version>
+        <spring-cloud-stream-dependencies.version>4.1.2</spring-cloud-stream-dependencies.version>
+        <testcontainers.version>1.19.8</testcontainers.version>
         <mockserver.version>5.15.0</mockserver.version>
-
-        <groovy.version>4.0.14</groovy.version>
+        <groovy.version>4.0.21</groovy.version>
         <apache-ivy.version>2.5.2</apache-ivy.version>
         <jakarta-jms.version>3.1.0</jakarta-jms.version>
-        <spring-cloud-aws.version>3.0.4</spring-cloud-aws.version>
-        <spring-integration-aws.version>3.0.5</spring-integration-aws.version>
+        <spring-cloud-aws.version>3.1.1</spring-cloud-aws.version>
+        <spring-integration-aws.version>3.0.7</spring-integration-aws.version>
         <curator.version>5.5.0</curator.version>
         <mavenThreads>1</mavenThreads>
-
-        <commons-compress.version>1.26.0</commons-compress.version>
+        <commons-compress.version>1.26.2</commons-compress.version>
         <json-path.version>2.9.0</json-path.version>
 		<!--suppress UnresolvedMavenProperty -->
 		<buildName>${env.BUILD_NAME}</buildName>
