--- a/.github/workflows/apps-plugin-milestone.yml
+++ b/.github/workflows/apps-plugin-milestone.yml
@@ -6,10 +6,6 @@ on:
       milestoneVersion:
         description: "Milestone version (no dash, eg. 'M1')"
         required: true
-
-env:
-  MAVEN_THREADS: '-T 0.5C'
-
 jobs:
   build_deploy_milestone:
     if: ${{ github.repository == 'spring-cloud/stream-applications' }}
@@ -21,8 +17,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
-          java-version: 17
-          distribution: temurin
+          java-version: 8
+          distribution: liberica
       - uses: jvalkeal/setup-maven@v1
         with:
           maven-version: 3.8.8
@@ -39,6 +35,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-m2-
       - name: Configure JFrog Cli
+        shell: bash
         run: |
           jfrog rt mvnc \
             --server-id-resolve=repo.spring.io \
@@ -50,9 +47,10 @@ jobs:
           echo JFROG_CLI_BUILD_NAME=spring-cloud-dataflow-apps-plugin-main-milestone >> $GITHUB_ENV
           echo JFROG_CLI_BUILD_NUMBER=$GITHUB_RUN_NUMBER >> $GITHUB_ENV
       - name: Build and Publish
+        shell: bash
         run: |
           jfrog rt mvn build-helper:parse-version versions:set \
-            -gs settings.xml \
+            -s settings.xml \
             -Pstagingmilestone \
             -DprocessAllModules=true \
             -DgenerateBackupPoms=false \
