--- a/.github/workflows/apps-plugin-next-dev-version.yml
+++ b/.github/workflows/apps-plugin-next-dev-version.yml
@@ -17,8 +17,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
-          java-version: 17
-          distribution: temurin
+          java-version: 8
+          distribution: liberica
       - uses: jvalkeal/setup-maven@v1
         with:
           maven-version: 3.8.8
@@ -57,7 +57,7 @@ jobs:
             -B
           jfrog rt build-clean
           mvn clean
-          jfrog rt mvn -gs settings.xml install -DskipTests -B         
+          jfrog rt mvn -s settings.xml install -DskipTests -B         
           jfrog rt build-publish
       - name: Commit next snapshot version changes
         uses: jvalkeal/build-zoo-handler@v0.0.4
