--- a/.github/workflows/apps-plugin-release.yml
+++ b/.github/workflows/apps-plugin-release.yml
@@ -3,8 +3,6 @@ name: Apps Plugin (Release)
 on:
   workflow_dispatch:
 
-env:
-  MAVEN_THREADS: '-T 0.5C'
 
 jobs:
   build_deploy_release:
@@ -17,8 +15,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
-          java-version: 17
-          distribution: temurin
+          java-version: 8
+          distribution: liberica
       - uses: jvalkeal/setup-maven@v1
         with:
           maven-version: 3.8.8
@@ -52,7 +50,7 @@ jobs:
       - name: Build and Publish
         run: |
           jfrog rt mvn build-helper:parse-version versions:set \
-            -gs settings.xml \
+            -s settings.xml \
             -Pstagingrelease \
             -DprocessAllModules=true \
             -DgenerateBackupPoms=false \
